# OncoSeg-3D-Multi-Scale-Tumor-Segmentation-for-Automated-Treatment-Response-Assessment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PROJECT_OVERVIEW.md  README.md  evaluate_checkpoint.py  pyproject.toml  train_all.py  train_local.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: brats2023.yaml  btcv.yaml  kits23.yaml  lits.yaml  msd_brain.yaml
configs/experiment/: brats_ablation.yaml  brats_oncoseg.yaml
configs/model/: oncoseg.yaml  oncoseg_temporal.yaml  swin_unetr.yaml  unet3d.yaml  unetr.yaml
data/scripts/: download_brats.py  download_btcv.py  download_kits23.py  download_lits.py  download_msd.py
docs/: AI_Knowledge_Fundamentals.md  AI_ML_Hiring_Points.md  Hardware_and_Data_Requirements.md  Interview_AI_Fundamentals.md  Interview_LeetCode_Questions.md  Interview_Questions.md  KAGGLE_SETUP.md  Manager_Interview_Questions.md  Paper_Discussion_Draft.md  Paper_Methods_Draft.md  Paper_Results_Draft.md  Pipeline_Document.md  Project_QA_Log.md
experiments/local_results/: failure_analysis.json  oncoseg_eval.json  oncoseg_per_subject_dice.npy  uncertainty_metrics.json  unet3d_eval.json  unet3d_per_subject_dice.npy  worst_case_diagnosis.json
notebooks/: OncoSeg_Full_Pipeline.ipynb  recist_response_demo.ipynb
scripts/: diagnose_worst_case.py  dryrun_ablation.py  evaluate_lumiere.py  integrate_kaggle_results.py  run_ablation.py  uncertainty_qualitative_analysis.py  verify_msd_dataset.py
src/: __init__.py  inference.py
src/analysis/: __init__.py  failure_analyzer.py  figures.py  model_profiler.py  result_analyzer.py
src/api/: __init__.py  app.py  cli.py  schemas.py  service.py
src/data/: __init__.py  brats_dataset.py  lumiere.py  msd_dataset.py  msd_transforms.py  transforms.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  oncoseg.py
src/models/baselines/: __init__.py  swin_unetr.py  unet3d.py  unetr.py
src/models/modules/: __init__.py  cnn_decoder.py  cross_attention_skip.py  deep_supervision.py  swin_encoder.py  temporal_attention.py
src/response/: __init__.py  classifier.py  recist.py
src/training/: __init__.py  losses.py  trainer.py
tests/: test_analysis.py  test_api.py  test_build_model.py  test_evaluate_lumiere.py  test_integrate_kaggle_results.py  test_losses.py  test_lumiere.py  test_models.py  test_modules.py  test_response.py  test_verify_msd_dataset.py
